@@ -1,0 +1,42 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 0,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+custom_entity{
+  name = "custom_entity_1",
+  layer = 0,
+  x = 24,
+  y = 61,
+  direction = 0,
+}
+
+custom_entity{
+  name = "custom_entity_2",
+  layer = 0,
+  x = 24,
+  y = 61,
+  direction = 0,
+}
+
